[project]
name = "dinov3-representation-lab"
version = "0.1.0"
description = "Reproducible evaluation and analysis of pretrained DINOv3 image representations."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dinov3-lab-smoke = "dinov3_representation_lab.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
