[project]
name = "dinov3-representation-lab"
version = "0.1.0"
description = "Reproducible evaluation and analysis of pretrained DINOv3 image representations."
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "torch>=2.7,<2.8",
    "torchvision>=0.22,<0.23",
    "transformers>=4.56,<5.0",
]

[project.scripts]
dinov3-lab-smoke = "dinov3_representation_lab.cli:main"
dinov3-lab-feature-smoke = "dinov3_representation_lab.phase1:main"
dinov3-lab-cache-features = "dinov3_representation_lab.phase2:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
